--- a/index4.html
+++ b/index4.html
@@ -2,12 +2,9 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Posten</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="postmanKatt.css">
-    <link rel="stylesheet" href="slideshow.css">
 </head>
 
 <body>
@@ -23,24 +20,24 @@
         </ul>
     </div>
 
-
-
     <div class="innhold">
-        <div id="slideshow">
-
-
+        <div class="kolonner"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+            nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
+            molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
+            qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
+            soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
         </div>
-        <div id="postmanKatt">
+        <div class="iframe">
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/_qPwlRu0zBI" frameborder="0" allowfullscreen="allowfullscreen"
+                data-link="https://www.youtube.com/watch?v=_qPwlRu0zBI"></iframe>
         </div>
     </div>
 
 
-
-    </div>
 
     <div class="bunn">
         <table>
-
             <tr>
                 <th> <a href="hjem.html">©2017 Posten Tysvær  </a> </th>
                 <th> <a href="https://www.thespruce.com/top-ten-tips-for-making-the-best-cookies-479848">Cookies  </a> </th>
@@ -48,7 +45,6 @@
             </tr>
         </table>
     </div>
-
 
 </body>
 
