--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="meny">
         <ul>
-            <li><a href="index.html">Hjem</a></li>
+            <li><a data-icon="clock" href="index.html">Hjem</a></li>
             <li><a href="index2.html">Produkt</a></li>
             <li><a href="index3.html">Kontakt</a></li>
             <li><a href="index4.html">Om oss</a></li>
