--- a/index.html
+++ b/index.html
@@ -2,51 +2,15 @@
 <html>
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Posten</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="postmanKatt.css">
-    <link rel="stylesheet" href="slideshow.css">
+    <link rel="stylesheet" href="startside.css">
 </head>
 
 <body>
-    <div class="tittel">
-        <h1>posten</h1>
-    </div>
-    <div id="meny">
-        <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="index2.html">Produkt</a></li>
-            <li><a href="index3.html">Kontakt</a></li>
-            <li><a href="index4.html">Om oss</a></li>
-        </ul>
-    </div>
-
-
-
-    <div class="innhold">
-        <div id="slideshow">
-        </div>
-        <div id="postmanKatt">
-        </div>
-    </div>
-
-
-
-    </div>
-
-    <div class="bunn">
-        <table>
-
-            <tr>
-                <th> <a href="hjem.html">©2017 Posten Tysvær  </a> </th>
-                <th> <a href="https://www.thespruce.com/top-ten-tips-for-making-the-best-cookies-479848">Cookies  </a> </th>
-                <th> <a href="https://www.verisure.no/sem/vs/g/sikkerhet?gclid=Cj0KCQjw557NBRC9ARIsAHJvVVNNtB5ZjegoRS_w3tMjv0ajnaY5nJhtq0jE6kE3ezGrASSDhLJ6cbEaAt3rEALw_wcB&gclsrc=aw.ds#1">  Personvern og sikkerhet</a></th>
-            </tr>
-        </table>
-    </div>
-
+<li>
+    <a href="hjem.html">Posten</a>
+</li>
 
 </body>
 
