--- a/om_oss.html
+++ b/om_oss.html
@@ -13,10 +13,10 @@
     </div>
     <div id="meny">
         <ul>
-            <li><a href="index.html">Hjem</a></li>
-            <li><a href="index2.html">Produkt</a></li>
-            <li><a href="index3.html">Kontakt</a></li>
-            <li><a href="index4.html">Om oss</a></li>
+            <li><a href="hjem.html">Hjem</a></li>
+            <li><a href="produkt.html">Produkt</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="om_oss.html">Om oss</a></li>
         </ul>
     </div>
 
