--- a/om_oss.html
+++ b/om_oss.html
@@ -21,15 +21,11 @@
     </div>
 
     <div class="innhold">
-        <div class="kolonner"> Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-            magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
-            nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse
-            molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim
-            qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
-            soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.
+        <div class="kolonner"> <span>Posten Norge AS er et nordisk post- og logistikkonsern som utvikler og leverer helhetlige løsninger innen post, kommunikasjon
+            og logistikk. Konsernet møter markedet med to merkevarer, Posten og Bring. </span> <p> Vi har fri på søndager, men jobber hver fredag. Er du ikke fornøyd? det er ikke vårt problem, vi bare leverer posten. </p>
         </div>
         <div class="iframe">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/_qPwlRu0zBI" frameborder="0" allowfullscreen="allowfullscreen"
+            <iframe width="300" height="200" src="https://www.youtube.com/embed/83QF0cNOHoc" frameborder="0" allowfullscreen="allowfullscreen"
                 data-link="https://www.youtube.com/watch?v=_qPwlRu0zBI"></iframe>
         </div>
     </div>
