--- a/kontakt.html
+++ b/kontakt.html
@@ -21,20 +21,24 @@
     </div>
 
     <div class="innhold">
+
         <form id="skjema">
 
-            <br><label> Fornavn <input id="fornavn" type="text"> </label>
+            <label>Fornavn</label>
+            <input type="text" id="fornavn" name="fornavn" placeholder="Ditt fornavn..">
+           
+            <br><hr><label>Etternavn</label>
+            <input type="text" id="etternavn" name="etternavn" placeholder="Ditt etternavn..">
 
-            <br><label> Etternavn <input id="etternavn" type="text"> </label>
+            <br><hr><label> Alder </label> <input type="text" id="alder" type="number" placeholder="Din alder..">
 
-            <br><label> Alder <input id="alder" type="number"> </label>
+            <br><hr><label> Adresse </label><input id="adresse" type="text" placeholder="Adressen din..">
 
-            <br><label> Adresse <input id="adresse" type="text"> </label>
-
-            <br><button id="lagre" type="button">Lagre </button>
+            <br><hr><button id="lagre" type="button" >Lagre </button>
 
         </form>
 
+      
         <div id="enID">
             <table>
                 <tr>
@@ -73,7 +77,7 @@
             let etternavn = document.getElementById("etternavn").value;
             let alder = document.getElementById("alder").value;
             let adresse = document.getElementById("adresse").value;
-            alert("Hei" + " " + fornavn + " " + etternavn +"."+" "+ "Jeg vet nå at du er" + " " + alder + " " + "år. " + " " + "Jeg vet også at du bor ved" + " "+ adresse + ".");
+            alert("Hei" + " " + fornavn + " " + etternavn + "." + " " + "Jeg vet nå at du er" + " " + alder + " " + "år. " + " " + "Jeg vet også at du bor ved" + " " + adresse + ".");
         }
     </script>
 </body>
