--- a/om_oss.html
+++ b/om_oss.html
@@ -22,7 +22,7 @@
 
     <div class="innhold">
         <div class="kolonner"> <span>Posten Norge AS er et nordisk post- og logistikkonsern som utvikler og leverer helhetlige løsninger innen post, kommunikasjon
-            og logistikk. Konsernet møter markedet med to merkevarer, Posten og Bring. </span> <p> Vi har fri på søndager, men jobber hver fredag. Er du ikke fornøyd? det er ikke vårt problem, vi bare leverer posten. </p>
+            og logistikk. Konsernet møter markedet med to merkevarer, Posten og Bring. </span> <p> Vi har fri på søndager, men jobber hver fredag. Er du ikke fornøyd? det er ikke vårt problem, vi bare leverer posten.  Du ringer, vi bringer.</p>
         </div>
         <div class="iframe">
             <iframe width="300" height="200" src="https://www.youtube.com/embed/83QF0cNOHoc" frameborder="0" allowfullscreen="allowfullscreen"
