--- a/kontakt.html
+++ b/kontakt.html
@@ -77,7 +77,7 @@
             let etternavn = document.getElementById("etternavn").value;
             let alder = document.getElementById("alder").value;
             let adresse = document.getElementById("adresse").value;
-            alert("Hei" + " " + fornavn + " " + etternavn + "." + " " + "Jeg vet nå at du er" + " " + alder + " " + "år. " + " " + "Jeg vet også at du bor ved" + " " + adresse + ".");
+            alert("Hei" + " " + fornavn + " " + etternavn + "." + " " + "Takk for at du er en kunde i Posten. som takk vil vi sende deg" + " " + alder + " " + "pakker i posten. " + " " + "Pakkene vil bli sendt til" + " " + adresse + ".");
         }
     </script>
 </body>
