--- a/hjem.html
+++ b/hjem.html
@@ -6,7 +6,7 @@
     <title>Posten</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="postmanKatt.css">
+    <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="slideshow.css">
 </head>
 
@@ -28,7 +28,7 @@
     <div class="innhold">
         <div id="slideshow">
         </div>
-        <div id="postmanKatt">
+        <div id="animation">
         </div>
     </div>
 
