--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 </head>
 
 <body>
+
+<div class="tittel">
     <h1>Christian Mikal Carlsen</h1>
+</div>
+
+<div class="innhold">
+
 <li>
     <a href="hjem.html">Posten</a>
 </li>
+
+</div>
 
 </body>
 
