--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
 </div>
 
+<div class="bilde">
+        <img src="https://media.giphy.com/media/glaaF70UZKxDG/giphy.gif"
+</div>
+
 </body>
 
 </html>
