--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="bilde">
-        <img src="https://media.giphy.com/media/glaaF70UZKxDG/giphy.gif"
+        <img src="http://i0.kym-cdn.com/photos/images/newsfeed/000/171/874/89d6f42c-d701-4d58-b96c-c533aa673c7c.gif"
 </div>
 
 </body>
