--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 
 <body>
 
-<div class="tittel">
-    <h1>Christian Mikal Carlsen</h1>
-</div>
+    <div class="tittel">
+        <h1>Christian Mikal Carlsen</h1>
+    </div>
 
-<div class="innhold">
+    <div class="innhold">
 
-<li>
-    <a href="hjem.html">Posten</a>
-</li>
+        <li>
+            <a href="hjem.html">Posten</a>
+        </li>
 
-</div>
+    </div>
 
-<div class="bilde">
-</div>
+    <div id="bilde">
+        <img src="https://developers.giphy.com/static/img/api.c99e353f761d.gif">
+    </div>
 
 </body>
 
