--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="innhold">
 
         <li>
-            <a href="hjem.html">Posten</a>
+            <a href="posten/hjem.html">Posten</a>
         </li>
 
     </div>
