--- a/posten/om_oss.html
+++ b/posten/om_oss.html
@@ -13,10 +13,10 @@
     </div>
     <div id="meny">
         <ul>
-                <li><a href="posten/hjem.html">Hjem</a></li>
-                <li><a href="posten/produkt.html">Produkt</a></li>
-                <li><a href="posten/kontakt.html">Kontakt</a></li>
-                <li><a href="posten/om_oss.html">Om oss</a></li>
+                <li><a href="hjem.html">Hjem</a></li>
+                <li><a href="produkt.html">Produkt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="om_oss.html">Om oss</a></li>
         </ul>
     </div>
 
