--- a/todo/index.html
+++ b/todo/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Posten</title>
+    <title>Todo</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="todo.css">
     <script src="https://get.mavo.io/mavo.js"></script>
