--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <li>
             <a href="posten/hjem.html">Posten</a>
+            <a href="todo">Todo</a>
         </li>
 
     </div>
