--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="bilde">
-        <img src="https://developers.giphy.com/static/img/api.c99e353f761d.gif">
+        <img src="https://media.giphy.com/media/k29Kh9hu2TZM4/giphy.gif">
     </div>
 
 </body>
