--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Posten</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="startside.css">
+    <link rel="stylesheet" href="animation.css">
 </head>
 
 <body>
@@ -21,6 +22,11 @@
         <li>
         <a href="todo">Todo</a>
         </li>
+
+    </div>
+    <div id="animation">
+        <img src="https://media.giphy.com/media/yqMtk0TfjRa5W/giphy.gif" alt="">
+    </div>
 
     </div>
 
