--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="posten/hjem.html">Posten</a>
         </li>
         <li>
-        <a href="todo">Todo</a>
+        <a href="todo">Gjøremål</a>
         </li>
 
     </div>
