--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
     <div class="tittel">
         <h1>Christian Mikal Carlsen</h1>
     </div>
+    <p>hei</p>
 
     <div class="innhold">
+        <ul>
+            <li>
+                <a href="posten/hjem.html">Posten</a>
+            </li>
+            <li>
+                <a href="todo">Gjøremål</a>
+            </li>
+            <li>
+                <a href="datautstyr"></a>
+            </li>
 
-        <li>
-            <a href="posten/hjem.html">Posten</a>
-        </li>
-        <li>
-        <a href="todo">Gjøremål</a>
-        </li>
+        </ul>
 
     </div>
     <div id="animation">
-        <img src="https://media.giphy.com/media/TG8YhV85Pkwta/giphy.gif" alt="">
+        <img src="http://vignette4.wikia.nocookie.net/saszombieassault/images/a/a1/Sanic.gif/revision/latest?cb=20160323032702" alt="">
     </div>
 
     </div>
