--- a/datautstyr/index.html
+++ b/datautstyr/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Posten</title>
+    <title>Datautstyr</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="datautstyr.css">
 </head>
