--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Posten</title>
+    <title>Christian Mikal Carlsen</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="startside.css">
     <link rel="stylesheet" href="animation.css">
