--- a/datautstyr/index.html
+++ b/datautstyr/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>Utstyr</h1>
     <ul>
         <li><a href="binærtall.html">binærtall</a></li>
         <li><a href="bilder.html">bilder</a></li>
