--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <a href="posten/hjem.html">Posten</a>
             </li>
             <li>
-                <a href="todo">Gjøremål</a>
+                <a href="todo/index.html">Gjøremål</a>
             </li>
             <li>
-                <a href="datautstyr"></a>
+                <a href="datautstyr/index.html">Datautstyr</a>
             </li>
 
         </ul>
