--- a/datautstyr/index.html
+++ b/datautstyr/index.html
@@ -9,17 +9,19 @@
 
 <body>
     <h1>Utstyr</h1>
-    <ul>
-        <li><a href="binærtall.html">binærtall</a></li>
-        <li><a href="bilder.html">bilder</a></li>
-        <li><a href="lagring.html">lagring</a></li>
-        <li><a href="farger.html">farger</a></li>
-        <li><a href="kompresjon.html">kompresjon</a></li>
-        <li><a href="lyd.html">lyd</a></li>
-        <li><a href="video.html">video</a></li>
-        <li><a href="signaler.html">signaler</a></li>
-        <li><a href="nettverk.html">nettverk</a></li>
-    </ul>
+    
+        <div id="rainbow"> 
+            <li><a href="binærtall.html">binærtall</a></li>
+            <li><a href="bilder.html">bilder</a></li>
+            <li><a href="lagring.html">lagring</a></li>
+            <li><a href="farger.html">farger</a></li>
+            <li><a href="kompresjon.html">kompresjon</a></li>
+            <li><a href="lyd.html">lyd</a></li>
+            <li><a href="video.html">video</a></li>
+            <li><a href="signaler.html">signaler</a></li>
+            <li><a href="nettverk.html">nettverk</a></li>
+        </div>
+    
 </body>
 
 </html>
