--- a/datautstyr/index.html
+++ b/datautstyr/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
+
 <html>
+        <title>Datautstyr</title>
+  <head>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="datautstyr.css">
+  </head>
 
-<head>
-    <title>Datautstyr</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="datautstyr.css">
-</head>
+    <body>
+        <h1>Datautstyr</h1>
 
-<body>
-    <div id="rainbow">
-        Utstyr
-    </div>
+        
+<ul>
+    <li><a href="binærtall.html">Binærtall</a></li>
+    <li><a href="bilder.html">Bilder</a></li>
+    <li><a href="lagring.html">Lagring</a></li>
+    <li><a href="farger.html">Farger</a></li>
+    <li><a href="kompresjon.html">Kompresjon</a></li>
+    <li><a href="lyd.html">Lyd</a></li>
+    <li><a href="video.html">Video</a></li>
+    <li><a href="signaler.html">Signaler</a></li>
+    <li><a href="nettverk.html">Nettverk</a></li>
 
+    <li><a href="index.html">Tilbake</a></li>
 
-    <li><a href="binærtall.html">binærtall</a></li>
-    <li><a href="bilder.html">bilder</a></li>
-    <li><a href="lagring.html">lagring</a></li>
-    <li><a href="farger.html">farger</a></li>
-    <li><a href="kompresjon.html">kompresjon</a></li>
-    <li><a href="lyd.html">lyd</a></li>
-    <li><a href="video.html">video</a></li>
-    <li><a href="signaler.html">signaler</a></li>
-    <li><a href="nettverk.html">nettverk</a></li>
+</ul>
 
+    <div id="bakgrunn">
+    <img src="
+</div>  
 
 </body>
 
