--- a/todo/index.html
+++ b/todo/index.html
@@ -25,6 +25,9 @@
                         </label>
                     </li>
                 </ul>
+
+                <input type="numbers" property="desimal" value="13" datatype="numbers" mv-mode="edit">
+                <span>Dette blir [desimal.toString(16)]</span>
             
             </main>
             
