--- a/datautstyr/binærtall.html
+++ b/datautstyr/binærtall.html
@@ -4,46 +4,44 @@
 <head>
     <title>Datautstyr</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="datautstyr.css">
+    <link rel="stylesheet" href="binærtall.css">
 </head>
 
 <body>
-
-
-
+    <h1>Binærtall, Transistor og Byte</h1>
+    <a href="index.html">tilbake</a> 
     <div id="main">
+    
         <div>
-            <table>
-                <tr>
-                    <th></th>
-                    <th>1990</th>
-                    <th>2000</th>
-                    <th>2010</th>
-                    <th>2017</th>
+            <h1>Binærtall</h1>
+            Binær er et tallsystem. I tallsystemet vi bruker til vanlig er det ti tall: 0 1 2 3 4 5 6 7 8 9. Dette er det desimale tallsystemet.
+            Men ti tall er veldig komplisert å legge inn i hardware til datamaskiner, så for å gjøre det enklere har man
+            brukt det binære tallsystemet. Binær er enkelt, det er bare 0 og 1. To alternativer, altså. I dataverdenen er
+            en bit en del av hardwaren. Vanligvis en ørliten del av en integrert krets, og den er enten stilt inn på 0 eller
+            1. Ordet bit er en forkortelse for binary digit, og er den minste mulige enheten av informasjon. Transistoren
 
-                </tr>
-                <tr>
-                    <td>cpu</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-
-                </tr>
-                <tr>
-                    <td>Antall T</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
         </div>
         <div>
+            <h1>Transitor</h1>
+            Transistoren er den viktigste komponenten i alle elektroniske kretser og apparater. I de første datamaskinene brukte man
+            radiorør, men i løpet av 50- og 60-årene ble de erstattet av transistorer. Transistoren var overlegen i driftsikkerhet,
+            energiforbruk og ikke minst i størrelse. Transistorer finnes i utallige utførelser i alt fra mikrotransistorer,
+            som er en del av en mikroprosessor, til store effekttransistorer for bruk i strømforsyning En transistor kan
+            brukes på to måter, enten som en bryter eller som en forsterker. I digitale maskiner er det egenskapen som bryter
+            som er viktig. Den gjør at vi kan styre strømmen av data mellom komponenter, og vi kan konstruere logiske kretser
+            som kan utføre operasjoner. Transistoren er datamaskinens byggesten og "arbeidshest", og den inngår i alle komponenter
+            fra prosessor, styringskretser og minne.
         </div>
-        <div></div>
+        <div>
+            <h1>Byte</h1>
+            1 byte = 8 bits Bits opptrer sjelden enkeltvis i en datamaskin. De er neste alltid samlet sammen i samlinger på åtte. Når
+            du grupperer åtte bits sammen får du en byte. Altså 1 byte = 8 bits. Denne inndelingen er noe man har kommet
+            frem til gjennom prøving og feiling. Man kan se på en byte som en byggestein i bokstav- og tallsystemet man bruker
+            for å gjøre det enklere å programmere. Binære tall
+
+        </div>
+
     </div>
-
 </body>
 
 </html>
