--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </div>
     <div id="animation">
-        <img src="http://vignette4.wikia.nocookie.net/saszombieassault/images/a/a1/Sanic.gif/revision/latest?cb=20160323032702" alt="">
+        <img src="https://78.media.tumblr.com/0d29a110bbd89fface87d17f6dade085/tumblr_inline_ovdgq6vDbw1u0od52_540.gif" alt="">
     </div>
 
     </div>
