--- a/datautstyr/binærtall.html
+++ b/datautstyr/binærtall.html
@@ -9,7 +9,10 @@
 
 <body>
     <h1>Binærtall, Transistor og Byte</h1>
-    <a href="index.html">tilbake</a> 
+    <a href="datautstyr.html">tilbake</a>  
+    <div class="animation">
+
+    </div>
     <div id="main">
     
         <div>
