--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="todo/index.html">Gjøremål</a>
             </li>
             <li>
-                <a href="datautstyr/index.html">Datautstyr</a>
+                <a href="datautstyr/datautstyr.html">Datautstyr</a>
             </li>
 
         </ul>
