--- a/datautstyr/lagring.html
+++ b/datautstyr/lagring.html
@@ -4,7 +4,7 @@
 <head>
     <title>Datautstyr</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="binærtall.css">
+    <link rel="stylesheet" href="lagring.css">
 </head>
 
 <body>
