--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
         <h1>Christian Mikal Carlsen</h1>
     </div>
     <p>hei</p>
+    
+    <div class="nabo">
+        <ul>
+            <li>
+                <a href="https://andreasgismarvik.github.io/">Venstre nabo</a>
+            </li>
+            <li>
+                <a href="https://torned00.github.io">Høyre nabo</a>
+            </li>
+        </ul>
+    </div>
 
     <div class="innhold">
         <ul>
