--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
         <h1>Christian Mikal Carlsen</h1>
     </div>
     <p>hei</p>
-    
-    <div class="nabo">
-        <ul>
-            <li>
-                <a href="https://andreasgismarvik.github.io/">Venstre nabo</a>
-            </li>
+
+    <div id="nabohoyre">
             <li>
                 <a href="https://torned00.github.io">Høyre nabo</a>
             </li>
-        </ul>
+    </div>
+    
+    <div id="nabovenstre">
+        <li>
+            <a href="https://andreasgismarvik.github.io/">Venstre nabo</a>
+        </li>
     </div>
 
     <div class="innhold">
@@ -44,12 +45,12 @@
     <div id="animation">
         <img src="https://78.media.tumblr.com/0d29a110bbd89fface87d17f6dade085/tumblr_inline_ovdgq6vDbw1u0od52_540.gif" alt="">
     </div>
-<div id="tv">
-    <img src="https://www.directpackages.com/assets/seo-c/images/devices/tv.png">
-</div>
-<div id="intro">
-    <img src="http://0.media.dorkly.cvcdn.com/59/97/9878d8d71b1c56bf9b7c8631ed6c4cd8.gif">
-</div>
+    <div id="tv">
+        <img src="https://www.directpackages.com/assets/seo-c/images/devices/tv.png">
+    </div>
+    <div id="intro">
+        <img src="http://0.media.dorkly.cvcdn.com/59/97/9878d8d71b1c56bf9b7c8631ed6c4cd8.gif">
+    </div>
     </div>
 
     <div id="bilde">
