--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li>
                 <a href="datautstyr/datautstyr.html">Datautstyr</a>
             </li>
+            <li>
+                <a href="sekskant.html">Sekskant</a>
+            </li>
 
         </ul>
 
