--- a/datautstyr/bilder.html
+++ b/datautstyr/bilder.html
@@ -29,6 +29,28 @@
         <div>
             <h1>svg</h1><p>SVG (Scalable Vector Graphics) er en bildekode/format som brukes til å forklare todimensjonal grafikk og grafiske løsninger i XML. Siden formatet kan benyttes av XML betyr det at det er et tekstbasert bildeformat. Noe som gjør at vi kan lese koden til bildet.</p>
         </div>
+        <div> <b>JPEG</b> <br>
+            <span>JPEG eller JPG er et elektronisk bildeformat som bruker en komprimeringsmetode med kvalitetstap, menn til gjengjeld blir filene som oftest mye mindre enn ved bruk av andre bildeformat som ikke har kvalitetstap.</span>
+        </div>
+        <div>
+            <b>PNG</b> <br>
+            <span>PNG-formatet har likheter med GIF-formatet, men i motsetning til GIF er ikke PNG-formatet begrenset til 256 farger for hvert bilde. Hver piksel i et PNG-bilde kan i tillegg inneholde grader av gjennomsiktighet (engelsk: alpha transparency), altså en blanding av farge og gjennomsiktighet. Pikslene i et GIF-bilde kan bare enten være farget eller gjennomsiktig, altså ikke en blanding.
+                    
+                    PNG-formatet brukes best til bilder som har store felter med helt lik farge, slik som mye av grafikken på websider har. Her vil PNG-formatet gi mindre filstørrelse enn fotoformatet JPEG. Dersom man bruker PNG-formatet på fotografier eller andre bilder som likner på fotografier, vil filstørrelsen bli relativt stor.</span>
+        </div>
+        <div>
+            <b>GIF</b> <br>
+            <span>GIF (Graphics Interchange Format) er et 8-bit-per-piksel bitmap-billedformat som brukes for å lagre bilder. Formatet bruker en palett med opptil 256 forskjellige farger fra 24-bit RGB-fargerommet. Formatet ble introdusert av CompuServe i 1987 og har siden blitt brukt i stor utstrekning på World Wide Web på grunn av at formatet er vidt støttet og er lett å porte. Formatet støtter også animasjon og tillater dessuten separate paletter på 256 farger for hvert bilde.
+                    Et GIF-bilde bruker tapsfri komprimering slik at filstørrelsen til et bilde kan reduseres uten å endre den visuelle kvaliteten, så lenge bildet kan vises med maksimalt 256 farger. Denne begrensningen gjør GIF-formatet upassende for fargefotografier (som sees stort sett i JPEG-formatet) og andre bilder med kontinuerlige farger. Formatet er passende for enkle bilder som grafikk eller logoer.
+            </span>
+        </div>
+        <div>
+             <b>BMP</b> <br>
+             <span>BMP kan ha flere betydninger.Windows Bitmap eller Bitmap Image er et filformat for lagring av digitale bilder, spesielt brukt i Microsoft Windows og OS/2. Det norske navnet er punktgrafikk. Formatet støtter flere fargedybder (bits per piksel): Monokrom punktgrafikk (1-bits), 16-fargers punktgrafikk (4-bits), 256-fargers punktgrafikk (8-bits), 65 536-fargers punktgrafikk (16-bits) og 16,7 millioner-fargers punktgrafikk (24-bits). 8-bits punktgrafikk er perfekt for bilder i gråskala. I tillegg til fargedybdene nevnt over, finnes det en fargedybde til som nesten ikke støttes av noen programmer. 32-bits punktgrafikk brukes av Windows XP til f.eks. bildet på startknappen. Om slike filer åpnes av Paint, blir alle gjennomsiktige eller halvveis gjennomsiktige piksler gjort ugjennomsiktige. Dette virker ikke godt når bildet har skygge. Paint kan hverken lagre dette formatet eller 16-bits punktgrafikk.</span>
+        </div>
+        <div>
+            <b>SVG</b> <br>
+            <span>Scalable Vector Graphics (SVG) er et XML-basert filformat for markeringsspråk som beskriver todimensjonal vektorgrafikk. Det er en åpen standard utviklet og vedlikeholdt av World Wide Web Consortium.</div>
     </div>
           
 </body>
