--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <li>
                 <a href="sekskant.html">Sekskant</a>
             </li>
+            <li>
+                <a href="land/land.html">Land</a>
+            </li>
 
         </ul>
 
