--- a/datautstyr/datautstyr.html
+++ b/datautstyr/datautstyr.html
@@ -23,13 +23,13 @@
         <li><a href="signaler.html">Signaler</a></li>
         <li><a href="nettverk.html">Nettverk</a></li>
 
-        <li><a href="index.html">Tilbake</a></li>
+        <li><a href="../index.html">Tilbake</a></li>
 
     </ul>
 
     <div id="bakgrunn">
-        
-</div>  
+
+    </div>
 
 </body>
 
