--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             <li>
                 <a href="land/land.html">Land</a>
             </li>
-<<<<<<< HEAD
+          
             <li>
                 <a href="land/dyr.html">vetrinær</a>
             </li>
             <li>
                 <a href="kundeskjema.html">Kundeskjema</a>
             </li>
-=======
->>>>>>> a251895967f48aaf85f68e9ba57458344463d9b7
-
+<li>
+        <a href="prove.html">Webshop</a>
+    </li>
         </ul>
 
     </div>
