--- a/prove.html
+++ b/prove.html
@@ -35,7 +35,7 @@
             </table>
             <table>
                 <tr>
-                    <td><img src="veske.png" height="400px" width="400px"> <br><b>Tittel:</b>kjekk veske <br> <b>Beskrivelse:</b>                        Kjekk veske</td>
+                    <td><img src="veske.png" height="400px" width="400px"> <br><b>Tittel:</b>Skinveske <br> <b>Beskrivelse:</b>                        Kjekk veske</td>
                 </tr>
                 <tr>
                     <td><b>Pris:</b> 600kr <button id="kjøp2" type="button" onclick='document.getElementById("kjøp2").innerHTML = confirm("Dette er ditt livs kjøp, vil du stå på?")'>kjøp</button></td>
