--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <p>hei</p>
 
     <div id="nabohoyre">
-            <li>
-                <a href="https://torned00.github.io">Høyre nabo</a>
-            </li>
+        <li>
+            <a href="https://torned00.github.io">Høyre nabo</a>
+        </li>
     </div>
-    
+
     <div id="nabovenstre">
         <li>
             <a href="https://andreasgismarvik.github.io/">Venstre nabo</a>
@@ -44,16 +44,19 @@
             <li>
                 <a href="land/land.html">Land</a>
             </li>
-          
+
             <li>
                 <a href="land/dyr.html">vetrinær</a>
             </li>
             <li>
                 <a href="kundeskjema.html">Kundeskjema</a>
             </li>
-<li>
-        <a href="prove.html">Webshop</a>
-    </li>
+            <li>
+                <a href="prove.html">Webshop</a>
+            </li>
+            <li>
+                <a href="julekort.html">Julekort</a>
+            </li>
         </ul>
 
     </div>
