--- a/julekort.html
+++ b/julekort.html
@@ -90,8 +90,12 @@
     </div>
     <script>
         var sound = new Howl({
+            src: ['punch.mp3']
+        });
+    /*    var sound = new Howl({
             src: ['julesang.mp3']
         });
+        */
         var sound1 = new Howl({
             src: [ 'julebeat.mp3']
         });
