--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <li>
                 <a href="julekort.html">Julekort</a>
             </li>
+            <li>
+                    <a href="grid/grid.html">Grid</a>
+                </li>
         </ul>
 
     </div>
