--- a/julekort.html
+++ b/julekort.html
@@ -88,6 +88,10 @@
     <div id="snow">
         <div class="santa"></div>
     </div>
+
+    <div id="kanon">
+        
+    </div>
     <script>
         var sound = new Howl({
             src: ['punch.mp3']
