--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
                 <a href="kundeskjema.html">Kundeskjema</a>
             </li>
             <li>
-                <a href="prove.html">Webshop</a>
+                <a href="prove/prove.html">Webshop</a>
             </li>
             <li>
-                <a href="julekort.html">Julekort</a>
+                <a href="julekort/julekort.html">Julekort</a>
             </li>
             <li>
                     <a href="grid/grid.html">Grid</a>
-                </li>
+            </li>
+
+            <li> 
+                <a href="risk/risk.html">Risk</a>
+            </li>
         </ul>
 
     </div>
