--- a/risk/risk.html
+++ b/risk/risk.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
+        <a href="rediger.html">Rediger</a>
     <div id="main">
-
+        
         <div id="land">
             <h4>Land</h4>
         </div>
