--- a/risk/rediger.html
+++ b/risk/rediger.html
@@ -17,36 +17,66 @@
             <h4>Rediger land</h4>
 
             <form>
-                <br> Land<input id="land" type="text">
-                <br>Region<input id="region" type="text">
-                <p>
-                    <button type="button" id="lagreland">Legg til land </button>
-                </p>
+                <div>
+                    <div> Land </div>
+                    <div><input id="land" type="text"> </div>
+                </div>
+                <div>
+                    <div>Region</div>
+                    <div><input id="region" type="text"> </div>
+                </div>
+                <div>
+                    <div>
+                        <button type="button" id="lagreland">Legg til land </button>
+                    </div>
+                </div>
+
             </form>
         </div>
 
         <div>
             <h4>Rediger Kort</h4>
             <form>
-                <br> Kort <input id="kort" type="text">
-                <br>Antall<input id="antallnye" type="number">
-                <p>
-                    <button type="button" id="lagrekort">Legg til kort</button>
-                </p>
+                <div>
+                    <div>Kort </div>
+                    <div><input id="kort" type="text"> </div>
+                </div>
+                <div>
+                    <div>Antall</div>
+                    <div><input id="antallnye" type="number"></div>
+                </div>
+                <div>
+                    <div>
+                        <div><button type="button" id="lagrekort">Legg til kort</button></div>
+                    </div>
+                </div>
             </form>
         </div>
 
         <div>
             <h4>Rediger spiller</h4>
             <form>
-                <br> Username<input id="spiller" type="text">
-                <br> Navn<input id="navn" type="text">
-                <br> Alder<input id="alder" type="number">
-                <br> Farge<input id="farge" type="text">
+                <div>
+                    <div>Username</div>
+                    <div><input id="spiller" type="text"></div>
+                </div>
+                <div>
+                    <div>Navn</div>
+                    <div><input id="navn" type="text"></div>
+                </div>
+                <div>
+                    <div>Alder</div>
+                    <div><input id="alder" type="number"></div>
+                </div>
+                <div>
+                    <div>Farge</div>
+                    <div><input id="farge" type="text"></div>
+                </div>
 
-                <p>
-                    <button type="button" id="lagrespiller">Legg til spiller</button>
-                </p>
+                <div>
+                    <div> <button type="button" id="lagrespiller">Legg til spiller</button>
+                    </div>
+                </div>
             </form>
         </div>
         <a href="risk.html">tilbake</a>
