--- a/risk/rediger.html
+++ b/risk/rediger.html
@@ -81,7 +81,11 @@
         </div>
         <a href="risk.html">tilbake</a>
     </div>
-    <iframe id="iframe" src="risk.html" height="500" width="750"></iframe>
+
+    <div id="sonic">
+        <div id="sprite"></div>
+    </div>
+    <iframe id="iframe" src="risk.html"></iframe>
 
     <script>
         setup();
