--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <li> 
                 <a href="risk/risk.html">Risk</a>
             </li>
+            <li><a href="nettbutikk/index.html">Nettbutikk</a></li>
         </ul>
 
     </div>
