--- a/bank/html/bli-kunde.html
+++ b/bank/html/bli-kunde.html
@@ -20,7 +20,7 @@
 
                 <div>
                     <ul>
-                        <li> <a href="index.html">Hjem</a></div>
+                        <li> <a href="../index.html">Hjem</a></div>
                 </li>
                 </ul>
                 <div>
@@ -28,22 +28,22 @@
                         <li>
                             <a href="#">Kunder</a>
                             <ul>
-                                <li> <a href="html/kunder.html">Våre kunder</a></li>
-                                <li><a href="html/bildegalleri.html">Bilder</a>
+                                <li> <a href="../html/kunder.html">Våre kunder</a></li>
+                                <li><a href="../html/bildegalleri.html">Bilder</a>
                             </ul>
                             </li>
                     </ul>
                 </div>
                 <div>
                     <ul>
-                        <li> <a href="html/om-oss.html">Om oss</a></div>
+                        <li> <a href="../html/om-oss.html">Om oss</a></div>
                 </li>
                 </ul>
                 <div>
                     <ul>
-                        <li><a href="html/logg-inn.html">Logg inn</a>
+                        <li><a href="../html/logg-inn.html">Logg inn</a>
                             <ul>
-                                <li><a href="html/bli-kunde.html">Bli kunde</a>
+                                <li><a href="../html/bli-kunde.html">Bli kunde</a>
                             </ul>
                             </li>
                     </ul>
